--- a/app/src/main/res/layout/activity_bloop_detail.xml
+++ b/app/src/main/res/layout/activity_bloop_detail.xml
@@ -34,11 +34,21 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/bloop_detail_container"
-        android:layout_width="match_parent"
+    <LinearLayout
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_width="match_parent"
+        android:id="@+id/bloop_detail_container"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp" />
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/bloop_detail_container_gl"
+        android:layout_width="match_parent"
+        android:layout_height="500dp" />
+    </LinearLayout>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
